<resources>
    <string name="app_name">My Movies App</string>
    <string name="cover_photo">Cover photo</string>
    <string name="movie_poster">Movie poster</string>
    <string name="avengers_infinity_war">Avengers infinity war</string>
    <string name="released">Released:</string>
    <string name="date_release_avengers">2018-01-01</string>
    <string name="overview">Overview:</string>
    <string name="overview_details">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment, the fate of Earth and existence has never been more uncertain.</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="Movie1">Jurassic World - Fallen Kingdom</string>
    <string name="descMovie1">Jurassic World: Fallen Kingdom is a 2018 American science fiction adventure film and the sequel to Jurassic World (2015).</string>
    <string name="movie_title">Title</string>
    <string name="movie_description">movie description</string>
    <string name="notification_message">Downloading Image %d</string>
    <string name="channel_name">PosterDownload</string>
    <string name="channel_desc">Downloading photo</string>
    <string name="notification_title">MoviesUpdate</string>
</resources>
